--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "stripe": "^10.2.0",
     "swagger-jsdoc": "5.0.1",
     "swagger-ui-express": "^4.5.0",
-    "uid": "^2.0.0"
+    "uid": "^2.0.0",
+    "booru": "*"
+
   }
 }
