--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
         "dest": "index.js"
       }
   ],
-  "functions": {
+  "functions": [
     "index.js": {
       "memory": 1024,
       "maxDuration": 30
@@ -20,5 +20,5 @@
       "memory": 1024,
       "maxDuration": 30
     }
-  }
+  ]
 }
