--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,10 @@
         "src": "/(.*)",
         "dest": "index.js"
       }
-  ],
-  "functions": [
+  ]
+},
+{
+  "functions": {
     "index.js": {
       "memory": 1024,
       "maxDuration": 30
@@ -20,5 +22,5 @@
       "memory": 1024,
       "maxDuration": 30
     }
-  ]
+    }
 }
