--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "bard-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Scraper Bard AI Google",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "bard-ai",
+    "bard.google.com"
+  ],
+  "author": "RizzyFuzz",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
-    "dotenv": "^16.0.1",
+    "morgan": "*",
+    "cors": "*",
     "express": "^4.18.1"
   }
 }
