--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.27.2",
     "morgan": "*",
     "cors": "*",
-    "chalk": "*",
+    "chalk": "^4.1.0",
     "express": "^4.18.1"
   }
 }
