--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "performance-now": "*",
+    "node-os-utils": "*",
     "morgan": "*",
     "cors": "*",
     "chalk": "^4.1.0",
