--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-os-utils": "*",
     "morgan": "*",
     "cors": "*",
+    "swagger-ui-express": "latest",
     "chalk": "^4.1.0",
     "express": "^4.18.1"
   }
