--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "node-os-utils": "*",
     "morgan": "*",
     "cors": "*",
-    "swagger-ui-express": "latest",
+    "swagger-ui-express": "github:rizzlogy/swagger-ui-express",
     "chalk": "^4.1.0",
     "express": "^4.18.1"
   }
