--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: "16.x"
       - run: npm i -g prettier
-      - run: prettier --write '**/*.{js,json}'
+      - run: prettier --write '**/*.{js, json, css, html, md}'
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
