--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.1",
     "performance-now": "*",
     "node-os-utils": "*",
     "morgan": "*",
