--- a/assets/bard/assets/js/manifest.json
+++ b/assets/bard/assets/js/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Bardie",
   "short_name": "Bardie",
-  "description": "Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.",
+  "description": "Bardie - Your AI-powered chatbot",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
