--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "express-rate-limit": "^5.3.0",
     "cookie-parser": "^1.4.6",
     "body-parser": "^1.20.1",
     "performance-now": "*",
