--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bard-api",
+  "name": "bardie-ai",
   "version": "1.0.0",
-  "description": "Scraper Bard AI Google",
+  "description": "Fullstack Clone Bard AI Google",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
