--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.1",
     "morgan": "*",
     "cors": "*",
+    "node-fetch": "^2.6.4",
     "swagger-ui-express": "github:rizzlogy/swagger-ui-express",
     "chalk": "^4.1.0",
     "express": "^4.18.1"
