--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "body-parser": "^1.20.1",
     "morgan": "*",
     "cors": "*",
-    "node-fetch": "^2.6.4",
+     "form-data": "^4.0.0",
+    "file-type": "^16.0.0"
     "swagger-ui-express": "github:rizzlogy/swagger-ui-express",
     "chalk": "^4.1.0",
     "express": "^4.18.1"
