--- a/package.json
+++ b/package.json
@@ -1,22 +1,52 @@
 {
   "name": "bard-api",
   "version": "1.0.0",
-  "description": "Function API Bard AI Google",
+  "description": "Function API Bardie Chat",
   "main": "index.js",
   "scripts": {
   "start": "node .",
   "test": "echo \"Error: no test specified\" &amp;amp;amp;amp;&amp;amp;amp;amp; exit 1"
   },
   "keywords": [
-    "bard-ai",
-    "bard.google.com"
+    "node",
+    "library",
+    "Google",
+    "Bard",
+    "LLM",
+    "Gemini",
+    "Codenze",
+    "Gemini",
+    "AI",
+    "chat",
+    "conversational",
+    "digital assistant",
+    "chatbot",
+    "language model",
+    "accessibility",
+    "Gemini API",
+    "generative AI",
+    "multimodal",
+    "text generation",
+    "multi-turn conversations",
+    "embedding",
+    "JavaScript SDK",
+    "AI models",
+    "web development",
+    "NPM",
+    "npm install",
+    "Google AI SDK",
+    "API key"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "author": "RizzyFuzz",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.1",
     "morgan": "*",
+    "@google/generative-ai": "^0.2.1",
     "cors": "*",
     "swagger-ui-express": "github:rizzlogy/swagger-ui-express",
     "chalk": "^4.1.0",
