--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-cookie=
+cookie=g.a000jAjeiph0-NZ_IP_TzDu5blKC1zTKfHGWuH66H1JvzLUjp4hhO1A3GcXuh_YTu9PHYZOoagACgYKAR0SAQASFQHGX2MiE-Tc_aUt27R2V3WxfeMHQhoVAUF8yKo457JSr2CnVeJXz_nLXF7O0076
 apiKey=
+port=8900
