--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GEMINI_COOKIE="g.a000jAjeiph0-NZ_IP_TzDu5blKC1zTKfHGWuH66H1JvzLUjp4hhO1A3GcXuh_YTu9PHYZOoagACgYKAR0SAQASFQHGX2MiE-Tc_aUt27R2V3WxfeMHQhoVAUF8yKo457JSr2CnVeJXz_nLXF7O0076"
 GEMINI_APIKEY="AIzaSyCCoVnCp5CrgI05YqtqSAHXSqFzC9SBuGU"
-PORT=8900
+PORT=8900 ## APP PORT
