--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cors": "*",
     "swagger-ui-express": "github:rizzlogy/swagger-ui-express",
     "chalk": "^4.1.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "dotenv": "^6.0.0"
   }
 }
