--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "gemini_cookie": "",
-  "gemini_apikey": ""
+  "gemini_cookie": "g.a000jAjeiph0-NZ_IP_TzDu5blKC1zTKfHGWuH66H1JvzLUjp4hhO1A3GcXuh_YTu9PHYZOoagACgYKAR0SAQASFQHGX2MiE-Tc_aUt27R2V3WxfeMHQhoVAUF8yKo457JSr2CnVeJXz_nLXF7O0076",
+  "gemini_apikey": "AIzaSyCCoVnCp5CrgI05YqtqSAHXSqFzC9SBuGU"
 }
