--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bard-api",
+  "name": "bardie-api",
   "version": "1.0.0",
   "description": "Function API Bardie Chat",
   "main": "index.js",
@@ -51,6 +51,8 @@
     "swagger-ui-express": "github:rizzlogy/swagger-ui-express",
     "chalk": "^4.1.0",
     "express": "^4.18.1",
+    "https-proxy-agent": "^5.0.0",
+    "socks-proxy-agent": "^5.0.0",
     "dotenv": "^6.0.0"
   }
 }
